--- a/index.html
+++ b/index.html
@@ -548,7 +548,8 @@
         "img": "Traditional Kulluvi Himachali Cap pahari Topi.jpg",
         "gallery": [
             "Traditional Kulluvi Himachali Cap pahari Topi.jpg",
-            "Traditional Kulluvi Himachali Cap pahari Topi1.jpg"
+            "Traditional Kulluvi Himachali Cap pahari Topi1.jpg",
+            "capsize.jpg"
         ],
         "options": {
             "type": "Size",
@@ -568,7 +569,8 @@
         "img": "Maroon Himachali Cap pahari Topi.jpg",
         "gallery": [
             "Maroon Himachali Cap pahari Topi.jpg",
-            "Maroon Himachali Cap pahari Topi1.jpg"
+            "Maroon Himachali Cap pahari Topi1.jpg",
+            "capsize.jpg"
         ],
         "options": {
             "type": "Size",
@@ -586,7 +588,10 @@
         "price": 449,
         "originalPrice": 641,
         "img": "Green Himachali Cap Pahari Topi.jpg",
-        "gallery": ["Green Himachali Cap Pahari Topi.jpg"],
+        "gallery": [
+            "Green Himachali Cap Pahari Topi1.jpg",
+            "capsize.jpg"
+        ],
         "options": {
             "type": "Size",
             "values": ["Size 5 (Small)", "Size 6 (Medium)", "Size 7 (Large)"]
@@ -750,6 +755,23 @@
         },
         "shortDesc": "Traditional lightweight Muffler",
         "desc": "Traditional weave muffler with kulluvi motifs. Pure wool.",
+        "care": "Hand wash/Dry Clean.",
+        "inStock": true
+    },
+    {
+        "id": 19,
+        "name": "Handmade Unisex Stripe Muffler",
+        "category": "Wovens",
+        "price": 399,
+        "originalPrice": 570,
+        "img": "stripe1.jpg",
+        "gallery": [
+            "stripe1.jpg",
+            "stripe2.jpg"
+        ],
+        "options": null,
+        "shortDesc": "Traditional weave muffler",
+        "desc": "Traditional weave muffler with kulluvi motifs. Purewool muffler weave on traditional handloom.",
         "care": "Hand wash/Dry Clean.",
         "inStock": true
     },
@@ -1156,4 +1178,5 @@
         });
     </script>
 </body>
+
 </html>
