--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
         "gallery": [
             "Traditional Kulluvi Himachali Cap pahari Topi.jpg",
             "Traditional Kulluvi Himachali Cap pahari Topi1.jpg",
-            "capsize.jpg"
+            "cap size.jpg"
         ],
         "options": {
             "type": "Size",
@@ -570,7 +570,7 @@
         "gallery": [
             "Maroon Himachali Cap pahari Topi.jpg",
             "Maroon Himachali Cap pahari Topi1.jpg",
-            "capsize.jpg"
+            "cap size.jpg"
         ],
         "options": {
             "type": "Size",
@@ -590,7 +590,7 @@
         "img": "Green Himachali Cap Pahari Topi.jpg",
         "gallery": [
             "Green Himachali Cap Pahari Topi1.jpg",
-            "capsize.jpg"
+            "cap size.jpg"
         ],
         "options": {
             "type": "Size",
@@ -610,7 +610,8 @@
         "img": "Kingri Malana Himachali Cap Pahari Topi.jpg",
         "gallery": [
             "Kingri Malana Himachali Cap Pahari Topi.jpg",
-            "Kingri Malana Himachali Cap Pahari Topi1.jpg"
+            "Kingri Malana Himachali Cap Pahari Topi1.jpg",
+            "cap size.jpg"
         ],
         "options": {
             "type": "Size",
@@ -1180,3 +1181,4 @@
 </body>
 
 </html>
+
