--- a/index.html
+++ b/index.html
@@ -476,8 +476,8 @@
       "id": 1,
       "name": "Tripple (3) Patti Woolen Shawl",
       "category": "Wovens",
-      "price": 2799,
-      "originalPrice": 3999,
+      "price": 2599,
+      "originalPrice": 3499,
       "img": "3 patti kullu himachali handloom shawl1.1.jpg",
       "gallery": [
         "3 patti kullu himachali handloom shawl1.1.jpg",
@@ -489,7 +489,7 @@
         "values": ["Black", "White", "Grey(Shown)"]
       },
       "shortDesc": "Elegant tripple (3) patti design.",
-      "desc": "Handwoven wool Shawl with a classic tripple patti design. Lightweight yet warm. Wrap yourself in the authentic warmth of the Kullu Valley. Meticulously hand-woven by local artisans.",
+      "desc": "Handwoven wool Shawl with a classic tripple patti design. Lightweight yet warm.Wrap yourself in the authentic warmth of the Kullu Valley. Meticulously hand-woven by local artisans, this shawl combines a solid, cozy base with vibrant, traditional patti (borders). It’s designed to provide superior insulation during cold winters while keeping you elegant. A perfect gift of heritage that never goes out of fashion. Meticulously hand-woven by local artisans.",
       "care": "Hand or Machine wash below 40 degree, use mild detergent.",
       "inStock": true
     },
@@ -510,7 +510,7 @@
         "values": ["Light Grey(Shown)", "White", "Light Brown"]
       },
       "shortDesc": "Elegant single patti design.",
-      "desc": "Handwoven wool Shawl with a classic single patti design. Lightweight yet warm. Perfect for everyday wear.",
+      "desc": "Handwoven wool Shawl with a classic single patti design. Lightweight yet warm.Wrap yourself in the authentic warmth of the Kullu Valley. Meticulously hand-woven by local artisans, this shawl combines a solid, cozy base with vibrant, traditional patti (borders). It’s designed to provide superior insulation during cold winters while keeping you elegant. A perfect gift of heritage that never goes out of fashion.Handwoven wool Shawl with a classic single patti design. Lightweight yet warm. Perfect for everyday wear.",
       "care": "Hand or Machine wash below 40 degree.",
       "inStock": true
     },
@@ -531,7 +531,7 @@
         "values": ["Grey (Shown)", "White", "Black", "Red"]
       },
       "shortDesc": "Elegant tripple (3) patti stole.",
-      "desc": "Handwoven wool Stole with a classic tripple patti design. A versatile accessory that adds an artistic touch to any outfit.",
+      "desc": "Handwoven wool Stole with a classic tripple patti design. Lightweight yet warm.This handloom stole is crafted for comfort, offering a soft texture and the vibrant, intricate patterns unique to the Kullu valley. A versatile accessory that adds an artistic touch to any outfit, whether you are dressing up for work or heading out for a casual evening",
       "care": "Hand or Machine wash below 40 degree.",
       "inStock": true
     },
@@ -552,7 +552,7 @@
         "values": ["Black", "Red (Shown)", "White", "Grey", "Pink"]
       },
       "shortDesc": "Elegant Single patti design.",
-      "desc": "Handwoven wool Stole with a classic single patti design. Lightweight yet warm.",
+      "desc": "Handwoven wool Stole with a classic patti design. Lightweight yet warm.This handloom stole is crafted for comfort, offering a soft texture and the vibrant, intricate patterns unique to the Kullu valley. A versatile accessory that adds an artistic touch to any outfit, whether you are dressing up for work or heading out for a casual evening",
       "care": "Hand or Machine wash below 40 degree.",
       "inStock": true
     },
@@ -835,8 +835,8 @@
       "id": 20,
       "name": "Embroided Women's Sleeveless Jacket (Black)",
       "category": "Jacket",
-      "price": 899,
-      "originalPrice": 1284,
+      "price": 799,
+      "originalPrice": 1199,
       "img": "Embroided Sleeveless women's black jackets.jpg",
       "gallery": [
         "Embroided Sleeveless women's black jackets.jpg",
@@ -847,7 +847,7 @@
         "values": ["38", "40", "42", "44"]
       },
       "shortDesc": "Stylish sleeveless woolen jacket.",
-      "desc": "Women’s sleeveless jacket inspired by traditional winter clothing.",
+      "desc": "Women’s sleeveless jacket inspired by traditional winter clothing.The sleeveless pattern makes it easy to wear over kurtis, sweaters, or dresses. The jacket is comfortable, lightweight, and suitable for regular use during cold weather. The embroidery is neatly done and adds a subtle ethnic touch without making the jacket heavy.",
       "care": "Hand wash, Dry Clean.",
       "inStock": true
     },
@@ -855,8 +855,8 @@
       "id": 21,
       "name": "Embroided Women's Sleeveless Jacket",
       "category": "Jacket",
-      "price": 899,
-      "originalPrice": 1284,
+      "price": 799,
+      "originalPrice": 1199,
       "img": "Embroided Sleeveless women's jackets.jpg",
       "gallery": [
         "Embroided Sleeveless women's jackets.jpg",
@@ -867,7 +867,7 @@
         "values": ["38", "40", "42", "44"]
       },
       "shortDesc": "Stylish woolen jacket.",
-      "desc": "Women’s sleeveless jacket inspired by traditional winter clothing.",
+      "desc": "Women’s sleeveless jacket inspired by traditional winter clothing.The sleeveless pattern makes it easy to wear over kurtis, sweaters, or dresses. The jacket is comfortable, lightweight, and suitable for regular use during cold weather. The embroidery is neatly done and adds a subtle ethnic touch without making the jacket heavy.",
       "care": "Hand wash, Dry Clean.",
       "inStock": true
     },
@@ -903,11 +903,11 @@
       "shortDesc": "Heritage Wall Art",
       "desc": "15x18 inches (Per Panel) Made of pure wool material, wooden frame, Glass Panel",
       "care": "Dust with Soft Cloth.",
-      "inStock": true
+      "inStock": false
     },
     {
       "id": 24,
-      "name": "Himachali pahadi Pullan/slippers",
+      "name": "Himachali pahadi Pulla/slippers",
       "category": "Footwear",
       "price": 399,
       "originalPrice": 570,
@@ -916,7 +916,7 @@
         "Himachali Pullan hemp.jpg",
         "Himachali Pullan hemp1.jpg"
       ],
-      "options": null,
+      "options": free size,
       "shortDesc": "Traditional handcrafted footwear",
       "desc": "Pahadi pullan or handmade slippers are woven with hemp bark by handicraft artisans, using colorful threads for decoration. Traditionally used for temple/kitchen, made of fully natural fibre.",
       "care": "Dust with Soft Cloth, avoid direct Sunlight.",
@@ -1167,12 +1167,20 @@
             rzp1.open();
         }
 
-        // FILTERS & SEARCH
-        function searchProducts() {
-            const term = document.getElementById('searchInput').value.toLowerCase();
-            const filtered = PRODUCTS.filter(p => p.name.toLowerCase().includes(term) || p.category.toLowerCase().includes(term));
-            renderProducts(filtered);
-        }
+       // FILTERS & SEARCH
+function searchProducts() {
+    const term = document.getElementById('searchInput').value.toLowerCase();
+    
+    // Ab ye Name aur Category ke sath Description bhi padhega
+    const filtered = PRODUCTS.filter(p => 
+        p.name.toLowerCase().includes(term) || 
+        p.category.toLowerCase().includes(term) ||
+        (p.desc && p.desc.toLowerCase().includes(term)) ||
+        (p.shortDesc && p.shortDesc.toLowerCase().includes(term))
+    );
+    
+    renderProducts(filtered);
+}
 
         function filterCategory(cat, btn) {
             document.querySelectorAll('.filter-btn').forEach(b => b.classList.remove('active'));
@@ -1236,3 +1244,4 @@
 </body>
 
 </html>
+
