--- a/index.html
+++ b/index.html
@@ -916,9 +916,9 @@
         "Himachali Pullan hemp.jpg",
         "Himachali Pullan hemp1.jpg"
       ],
-      "options": free size,
+      "options": null,
       "shortDesc": "Traditional handcrafted footwear",
-      "desc": "Pahadi pullan or handmade slippers are woven with hemp bark by handicraft artisans, using colorful threads for decoration. Traditionally used for temple/kitchen, made of fully natural fibre.",
+      "desc": "Free Size Pahadi pullan or handmade slippers are woven with hemp bark by handicraft artisans, using colorful threads for decoration. Traditionally used for temple/kitchen, made of fully natural fibre.",
       "care": "Dust with Soft Cloth, avoid direct Sunlight.",
       "inStock": true
     }
@@ -1244,4 +1244,5 @@ function searchProducts() {
 </body>
 
 </html>
+
 
