--- a/index.html
+++ b/index.html
@@ -76,6 +76,78 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         html { scroll-behavior: smooth; }
         body { font-family: 'Lato', sans-serif; background: var(--bg); color: var(--text); line-height: 1.6; }
+/* ===== NEW: SHARE BUTTON & REVIEWS STYLES ===== */
+        
+        /* Share & Cart Buttons Layout */
+        .action-buttons {
+            display: flex;
+            gap: 10px;
+            margin-top: 1rem;
+        }
+
+        /* Share Button Style */
+        .share-btn {
+            flex: 1; /* Barabar jagah lega */
+            background: white;
+            border: 1px solid var(--brand);
+            color: var(--brand);
+            padding: 15px;
+            border-radius: 4px;
+            font-weight: 700;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
+            transition: var(--transition);
+        }
+
+        .share-btn:hover {
+            background: #f9f9f9;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        /* Reviews Section Container */
+        .review-section {
+            margin-top: 2rem;
+            padding-top: 1.5rem;
+            border-top: 1px dashed #ccc; /* Separation line */
+        }
+
+        .review-title {
+            font-size: 1.1rem;
+            font-weight: bold;
+            margin-bottom: 1rem;
+            color: var(--brand-dark);
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        /* Individual Review Card */
+        .review-card {
+            background: #fff;
+            padding: 12px;
+            border-radius: 6px;
+            margin-bottom: 10px;
+            border: 1px solid #eee;
+            font-size: 0.95rem;
+        }
+
+        .review-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 6px;
+            font-weight: 700;
+            color: var(--text);
+        }
+
+        /* Gold Stars Color */
+        .stars {
+            color: #FFD700; /* Golden Yellow */
+            font-size: 0.9rem;
+        }
 
         /* ===== UTILITIES ===== */
         .trust-banner { background: var(--brand); color: white; padding: 8px; font-size: 0.75rem; text-align: center; display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;
@@ -555,7 +627,31 @@
       "shortDesc": "Elegant tripple (3) patti design.",
       "desc": "Handwoven wool Shawl with a classic tripple patti design. Lightweight yet warm.Wrap yourself in the authentic warmth of the Kullu Valley. Meticulously hand-woven by local artisans, this shawl combines a solid, cozy base with vibrant, traditional patti (borders). It’s designed to provide superior insulation during cold winters while keeping you elegant. A perfect gift of heritage that never goes out of fashion. Meticulously hand-woven by local artisans.",
       "care": "Hand or Machine wash below 40 degree, use mild detergent.",
-      "inStock": true
+      "inStock": true,
+          {
+      "id": 1,
+      "name": "Tripple (3) Patti Woolen Shawl",
+      "category": "Wovens",
+      "price": 2599,
+      "originalPrice": 3499,
+      "img": "3 patti kullu himachali handloom shawl1.1.jpg",
+      "gallery": [
+        "3 patti kullu himachali handloom shawl1.1.jpg",
+        "3 patti kullu himachali handloom shawl1.2.jpg",
+        "3 patti kullu himachali handloom shawl1.3.jpg"
+      ],
+      "options": {
+        "type": "Color",
+        "values": ["Black", "White", "Grey(Shown)"]
+      },
+      "shortDesc": "Elegant tripple (3) patti design.",
+      "desc": "Handwoven wool Shawl with a classic tripple patti design. Lightweight yet warm.Wrap yourself in the authentic warmth of the Kullu Valley.",
+      "care": "Hand or Machine wash below 40 degree, use mild detergent.",
+      "inStock": true,
+      "reviews": [
+        { "user": "Niharika Nerva", "rating": 5, "text": "Bhot sunder shawl hai.. design ekdm saaf hai or garam b hai. Packaging b achi thi. Thanks." },
+        { "user": "Anjali S.", "rating": 4, "text": "Authentic Kullu shawl. Pure wool feel hota hai." }
+      ]
     },
     {
       "id": 2,
@@ -576,7 +672,11 @@
       "shortDesc": "Elegant single patti design.",
       "desc": "Handwoven wool Shawl with a classic single patti design. Lightweight yet warm.Wrap yourself in the authentic warmth of the Kullu Valley. Meticulously hand-woven by local artisans, this shawl combines a solid, cozy base with vibrant, traditional patti (borders). It’s designed to provide superior insulation during cold winters while keeping you elegant. A perfect gift of heritage that never goes out of fashion.Handwoven wool Shawl with a classic single patti design. Lightweight yet warm. Perfect for everyday wear.",
       "care": "Hand or Machine wash below 40 degree.",
-      "inStock": true
+      "inStock": true,
+      "reviews": [
+        { "user": "Nishant Choudhary", "rating": 5, "text": "Mene apni mummy k liye gift liya tha.. unko bhut pasand aaya. Keh ri thi chubhne wala material ni hai soft hai." },
+        { "user": "Rohan K.", "rating": 5, "text": "Best quality at this price." }
+      ]
     },
     {
       "id": 3,
@@ -856,7 +956,11 @@
       "shortDesc": "Stylish woolen jacket.",
       "desc": "Traditional weave jacket with modern fitting. Can be worn over kurta or shirt.",
       "care": "Dry Clean Only.",
-      "inStock": true
+     "inStock": true,
+      "reviews": [
+        { "user": "Sarita Devi", "rating": 5, "text": "Mere husband k liye mangvaya tha size 40.. fitting ekdm perfect aayi hai. Wool pure lg ra hai. Acha product hai." },
+        { "user": "Vikram", "rating": 4, "text": "Nice jacket, looks royal with kurta." }
+      ]
     },
     {
       "id": 18,
@@ -876,7 +980,11 @@
       "shortDesc": "Traditional lightweight Muffler",
       "desc": "Traditional weave muffler with kulluvi motifs. Pure wool.",
       "care": "Hand wash/Dry Clean.",
-      "inStock": true
+      "inStock": true,
+      "reviews": [
+        { "user": "Rajesh Kumar", "rating": 5, "text": "Sister k liye liya tha college jane ko.. bhot bdia quality hai bhai. Price b theek hai." },
+        { "user": "Dev", "rating": 5, "text": "Warm and stylish." }
+      ]
     },
     {
       "id": 19,
@@ -967,7 +1075,11 @@
       "shortDesc": "Heritage Wall Art",
       "desc": "15x18 inches (Per Panel) Made of pure wool material, wooden frame, Glass Panel",
       "care": "Dust with Soft Cloth.",
-      "inStock": false
+      "inStock": false,
+      "reviews": [
+        { "user": "Mayank Sharma", "rating": 5, "text": "Masterpiece! Love from Bangalore." }
+      ]
+    },
     },
     {
       "id": 24,
@@ -984,7 +1096,11 @@
       "shortDesc": "Traditional handcrafted footwear",
       "desc": "Free Size Pahadi pullan or handmade slippers are woven with hemp bark by handicraft artisans, using colorful threads for decoration. Traditionally used for temple/kitchen, made of fully natural fibre.",
       "care": "Dust with Soft Cloth, avoid direct Sunlight.",
-      "inStock": true
+     "inStock": true,
+      "reviews": [
+        { "user": "Amit", "rating": 4, "text": "Ghar mein pehnne k liye best hai. look b traditional hai." },
+        { "user": "Devansh Thakur", "rating": 5, "text": "Old memories refreshed. Good work." }
+      ]
     }
   ];
 
@@ -1373,7 +1489,3 @@ function searchProducts() {
 </body>
 
 </html>
-
-
-
-
