--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
       ],
       "options": {
         "type": "Color",
-        "values": ["Grey (Shown)", "White", "Black", "Red"]
+        "values": ["Black (Shown)", "White", "Grey", "Red"]
       },
       "shortDesc": "Elegant tripple (3) patti stole.",
       "desc": "Handwoven wool Stole with a classic tripple patti design. Lightweight yet warm.This handloom stole is crafted for comfort, offering a soft texture and the vibrant, intricate patterns unique to the Kullu valley. A versatile accessory that adds an artistic touch to any outfit, whether you are dressing up for work or heading out for a casual evening",
@@ -1075,7 +1075,7 @@
       "options": null,
       "shortDesc": "Traditional handcrafted footwear",
       "desc": "Free Size Pahadi pullan or handmade slippers are woven with hemp bark by handicraft artisans, using colorful threads for decoration. Traditionally used for temple/kitchen, made of fully natural fibre.",
-      "care": "Dust with Soft Cloth, avoid direct Sunlight.",
+      "care": "keep them dry,avoid water.",
       "inStock": true,
       "reviews": [
         { "user": "Amit", "rating": 4, "text": "Ghar mein pehnne k liye best hai. look b traditional hai." },
@@ -1563,3 +1563,4 @@
     </script>
 </body>
 </html>
+
