--- a/index.html
+++ b/index.html
@@ -403,6 +403,7 @@
         <span class="nav-link" onclick="switchView('shop')">Wovens</span>
         <span class="nav-link" onclick="switchView('about')">Story</span>
         <span class="nav-link" onclick="switchView('contact')">Contact</span>
+        <span class="nav-link" onclick="switchView('blog')">Blog</span>
         <span class="nav-link" onclick="switchView('policies')">Policies</span>
     </nav>
 
@@ -520,7 +521,89 @@
             </div>
         </div>
     </section>
+    <section id="blog-view" class="section-container" style="background-color: #fafafa; padding-top: 4rem;">
+        <h2 style="text-align:center; margin-bottom:0.5rem; font-family:'Playfair Display', serif;">The Handiweave Journal</h2>
+        <p style="text-align:center; color:#666; margin-bottom:3rem; font-style:italic;">Chronicles of the Loom, the Land, and the Legacy.</p>
 
+        <div style="background:white; padding:2rem; border-radius:12px; box-shadow:0 5px 20px rgba(0,0,0,0.05); margin-bottom:3rem;">
+            <div style="border-left:4px solid var(--gold); padding-left:20px; margin-bottom:1.5rem;">
+                <h3 style="color:var(--brand-dark); margin-bottom:0.5rem; font-size:1.5rem;">Meet the Hands Behind the 'Khaddi'</h3>
+                <p style="color:#777; font-size:0.9rem;">Preserving the Soul of Himachal</p>
+            </div>
+
+            <div class="story-container" style="margin-top:0; align-items:flex-start;">
+                <div class="story-image">
+                    <img src="artisan1.jpg" alt="Bhanu Master Ji" loading="lazy" style="border-radius:8px; width:100%;">
+                    <p style="text-align:center; font-size:0.85rem; color:#777; margin-top:5px;"><em>Master Weaver Bhanu Ji at work.</em></p>
+                </div>
+                <div class="story-content">
+                    <p style="line-height:1.8; margin-bottom:1rem;">
+                        At Handiweave, we don't have factories; we have <strong>Ghar-Aangan</strong> (homes). Our strength lies in the local artisans like <strong>Bhanu Master Ji</strong>, <strong>Shyamla Devi</strong>, and <strong>Raghuveer Ji</strong>.
+                    </p>
+                    <p style="line-height:1.8;">
+                        These are the guardians of our <em>Virasat</em> (heritage). Their fingers move on the loom with a rhythm that no machine can replicate. We are simply a platform to bring their art from the valleys of Palampur to the world.
+                    </p>
+                </div>
+            </div>
+
+            <h4 style="text-align:center; margin: 2rem 0 1rem; color:var(--brand);">The 4-Day Ritual of Creation</h4>
+            <div class="craft-grid" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap:15px; margin-top:0;">
+                <div style="text-align:center;">
+                    <img src="artisan.jpg" style="width:100%; height:160px; object-fit:cover; border-radius:8px;">
+                    <h5 style="margin-top:8px; font-size:0.9rem;">1. Beam Winding</h5>
+                </div>
+                <div style="text-align:center;">
+                    <img src="close.jpg" style="width:100%; height:160px; object-fit:cover; border-radius:8px;">
+                    <h5 style="margin-top:8px; font-size:0.9rem;">2. Intricate Weaving</h5>
+                </div>
+                <div style="text-align:center;">
+                    <img src="dori.jpg" style="width:100%; height:160px; object-fit:cover; border-radius:8px;">
+                    <h5 style="margin-top:8px; font-size:0.9rem;">3. Hand-tied Dori</h5>
+                </div>
+            </div>
+        </div>
+
+        <div style="background:white; padding:2rem; border-radius:12px; box-shadow:0 5px 20px rgba(0,0,0,0.05);">
+            <div style="border-left:4px solid #e74c3c; padding-left:20px; margin-bottom:1.5rem;">
+                <h3 style="color:var(--brand-dark); margin-bottom:0.5rem; font-size:1.5rem;">Asli vs Nakli: The Truth About Himachali Topis</h3>
+                <p style="color:#777; font-size:0.9rem;">How to identify authentic Handloom vs Machine Copies</p>
+            </div>
+
+            <p style="margin-bottom:2rem; line-height:1.8;">
+                The market is flooded with cheap copies sold as "Himachali Topis". But true luxury lies in authenticity. Here is how you can spot the difference between an <em>Asli</em> (Real) Handloom piece and a machine-made fake.
+            </p>
+
+            <div style="display:grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap:20px; margin-bottom:2rem;">
+                <div style="background:#f4f4f4; padding:10px; border-radius:8px; text-align:center;">
+                    <img src="weave.jpg" alt="Authentic Handloom" style="width:100%; height:200px; object-fit:cover; border-radius:6px; border:2px solid #27ae60;">
+                    <h4 style="color:#27ae60; margin-top:10px;">ORIGINAL (Handloom) ✅</h4>
+                    <p style="font-size:0.85rem; color:#555;">Design is woven into the fabric.</p>
+                </div>
+                <div style="background:#f4f4f4; padding:10px; border-radius:8px; text-align:center;">
+                    <img src="emb.jpg" alt="Fake Machine Work" style="width:100%; height:200px; object-fit:cover; border-radius:6px; border:2px solid #e74c3c;">
+                    <h4 style="color:#e74c3c; margin-top:10px;">FAKE (Embroidery) ❌</h4>
+                    <p style="font-size:0.85rem; color:#555;">Design is pasted/stitched on top.</p>
+                </div>
+            </div>
+
+            <div style="background:#FFF8E1; padding:20px; border-radius:8px; border:1px solid #ffe0b2;">
+                <h4 style="margin-bottom:1rem; color:#d35400;">💡 How to Identify? (3 Golden Rules)</h4>
+                <ul style="padding-left:20px; line-height:1.8; color:#444;">
+                    <li style="margin-bottom:10px;">
+                        <strong>1. The 'Extra Weft' Technique:</strong> This is the biggest giveaway. In authentic handloom, the geometric design is created by inserting extra threads <em>during</em> the weaving process. 
+                        <br>👉 <strong>The Check:</strong> Look at the backside of the fabric. In real handloom, the design is visible on both sides (reverse colors). In fakes, the back is often covered with white fusing or looks messy.
+                    </li>
+                    <li style="margin-bottom:10px;">
+                        <strong>2. Texture & Feel:</strong> Machine embroidery feels flat and plastic-like. Authentic wool has a natural, slightly coarse texture that breathes.
+                    </li>
+                    <li>
+                        <strong>3. The Warmth:</strong> Real wool keeps you warm but doesn't make you sweat. Synthetic copies trap heat comfortably.
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </section>
     <footer class="main-footer">
         <div class="social-links">
             <a href="https://instagram.com/handiweave" class="social-link" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -1571,5 +1654,6 @@ function renderProducts(items = PRODUCTS) {
     </script>
 </body>
 </html>
+
 
 
