--- a/index.html
+++ b/index.html
@@ -397,7 +397,39 @@
             </div>
         </div>
     </section>
+    </section>
 
+    <section id="contact-view" class="section-container">
+        <h2 style="text-align:center; margin-bottom:1rem; margin-top: 2rem;">Contact Us</h2>
+        <p style="text-align:center; color:#666; margin-bottom:2rem;">Humse sampark karein. Hamein apki madad karke khushi hogi.</p>
+        
+        <div class="contact-form">
+            <form action="https://formspree.io/f/xlgdnggr" method="POST">
+                
+                <div class="form-group">
+                    <label for="name" style="display:block; margin-bottom:5px; font-weight:bold;">Naam (Name)</label>
+                    <input type="text" id="name" name="name" required placeholder="Apna naam likhein" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <label for="email" style="display:block; margin-bottom:5px; font-weight:bold;">Email</label>
+                    <input type="email" id="email" name="email" required placeholder="Apna email address likhein" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <label for="phone" style="display:block; margin-bottom:5px; font-weight:bold;">Phone (Optional)</label>
+                    <input type="tel" id="phone" name="phone" placeholder="Mobile Number" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <label for="message" style="display:block; margin-bottom:5px; font-weight:bold;">Sandesh (Message)</label>
+                    <textarea id="message" name="message" rows="5" required placeholder="Apna sandesh yahan likhein..." class="form-control"></textarea>
+                </div>
+
+                <button type="submit" class="submit-btn">Bhejein (Send Message)</button>
+            </form>
+        </div>
+    </section>
    <section id="policies-view" class="section-container">
         <h2>Our Policies</h2>
         <div class="policy-accordion">
@@ -1724,6 +1756,7 @@
     </script>
 </body>
 </html>
+
 
 
 
