--- a/index.html
+++ b/index.html
@@ -401,19 +401,19 @@
 
     <section id="contact-view" class="section-container">
         <h2 style="text-align:center; margin-bottom:1rem; margin-top: 2rem;">Contact Us</h2>
-        <p style="text-align:center; color:#666; margin-bottom:2rem;">Humse sampark karein. Hamein apki madad karke khushi hogi.</p>
+        <p style="text-align:center; color:#666; margin-bottom:2rem;">Contact us for Query/Feedback.</p>
         
         <div class="contact-form">
             <form action="https://formspree.io/f/xlgdnggr" method="POST">
                 
                 <div class="form-group">
-                    <label for="name" style="display:block; margin-bottom:5px; font-weight:bold;">Naam (Name)</label>
-                    <input type="text" id="name" name="name" required placeholder="Apna naam likhein" class="form-control">
+                    <label for="name" style="display:block; margin-bottom:5px; font-weight:bold;">Name</label>
+                    <input type="text" id="name" name="name" required placeholder="Your Name" class="form-control">
                 </div>
 
                 <div class="form-group">
                     <label for="email" style="display:block; margin-bottom:5px; font-weight:bold;">Email</label>
-                    <input type="email" id="email" name="email" required placeholder="Apna email address likhein" class="form-control">
+                    <input type="email" id="email" name="email" required placeholder="Your Email id" class="form-control">
                 </div>
 
                 <div class="form-group">
@@ -422,11 +422,11 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="message" style="display:block; margin-bottom:5px; font-weight:bold;">Sandesh (Message)</label>
-                    <textarea id="message" name="message" rows="5" required placeholder="Apna sandesh yahan likhein..." class="form-control"></textarea>
+                    <label for="message" style="display:block; margin-bottom:5px; font-weight:bold;">Message </label>
+                    <textarea id="message" name="message" rows="5" required placeholder="write your message here" class="form-control"></textarea>
                 </div>
 
-                <button type="submit" class="submit-btn">Bhejein (Send Message)</button>
+                <button type="submit" class="submit-btn">Send Message</button>
             </form>
         </div>
     </section>
@@ -1756,6 +1756,7 @@
     </script>
 </body>
 </html>
+
 
 
 
