--- a/shop.html
+++ b/shop.html
@@ -2,11 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#7A5548">
-    <title>Wovens Collection | Handiweave</title>
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="theme-color" content="#7A5548">
+
+<title>Wovens Collection | Handiweave</title>
+
+<meta name="description" content="Shop authentic Himachali Handloom: Shawls, Stoles, Caps & Jackets. Direct from himachali artisans.">
+
+<meta property="og:title" content="Wovens Collection | Handiweave">
+<meta property="og:image" content="https://handiweave.com/logo.png">
+<meta property="og:description" content="Authentic Handloom from Himachal.">
+<meta property="og:url" content="https://handiweave.com/shop.html">
+
+<link rel="canonical" href="https://handiweave.com/shop.html">
+
+<link rel="icon" type="image/png" href="favicon.png">
+
+<link rel="stylesheet" href="style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SEWM8S3WL0"></script>
     <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-SEWM8S3WL0');</script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
@@ -51,4 +63,5 @@
     <div class="notification" id="notification"><i class="fas fa-check-circle"></i> <span id="notificationText"></span></div>
     <script src="script.js"></script>
 </body>
+
 </html>
