--- a/about.html
+++ b/about.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#7A5548">
-    <title>Our Story | Handiweave</title>
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="style.css">
+   <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="theme-color" content="#7A5548">
+
+<title>Our Story | Handiweave</title>
+
+<meta name="description" content="Discover the heritage of Handiweave. Empowering Himachali artisans and bridging traditions with trends.">
+
+<meta property="og:title" content="Our Story | Handiweave">
+<meta property="og:image" content="https://handiweave.com/logo.png">
+<meta property="og:url" content="https://handiweave.com/about.html">
+
+<link rel="canonical" href="https://handiweave.com/about.html">
+
+<link rel="icon" type="image/png" href="favicon.png">
+<link rel="stylesheet" href="style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SEWM8S3WL0"></script>
     <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-SEWM8S3WL0');</script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
@@ -62,4 +72,5 @@
     <div class="notification" id="notification"><i class="fas fa-check-circle"></i> <span id="notificationText"></span></div>
     <script src="script.js"></script>
 </body>
+
 </html>
