--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     </nav>
 
     <section class="section-container" style="display:block;">
-        <div class="story-container">
+        <div class="story-container" style="background-color: #FDFBF7; padding: 2.5rem; border-radius: 8px; border: 1px solid #EFEBE0; box-shadow: 0 4px 15px rgba(0,0,0,0.05);">
             <div class="story-image"><img src="cr1.jpg" alt="Handiweave Certificate" loading="lazy"></div>
             <div class="story-content">
                 <h2>Our Story</h2>
@@ -74,3 +74,4 @@
 </body>
 
 </html>
+
