--- a/journal.html
+++ b/journal.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#7A5548">
-    <title>The Journal | Handiweave</title>
+
+    <title>Weaver's Journal | Handiweave Blog</title>
+    <meta name="description" content="Read about the art of Himachali weaving, handloom fabric, and the lives of our artisans.">
+
+    <meta property="og:title" content="Weaver's Journal | Handiweave">
+    <meta property="og:image" content="https://handiweave.com/logo.png">
+    <meta property="og:url" content="https://handiweave.com/journal.html">
+
+    <link rel="canonical" href="https://handiweave.com/journal.html">
+    
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SEWM8S3WL0"></script>
     <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-SEWM8S3WL0');</script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
@@ -14,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="trust-banner"><span><i class="fas fa-certificate"></i> Devbhoomi Himachal</span><span><i class="fas fa-hand-holding-heart"></i> 100% Handcrafted</span><span><i class="fas fa-truck"></i> Pan India Shipping</span></div>
+    <div class="trust-banner"><span><i class="fas fa-certificate"></i> Devbhoomi Himachal</span><span><i class="fas fa-hand-holding-heart"></i> Handloom & Handcrafted</span><span><i class="fas fa-truck"></i> Pan India Shipping</span></div>
     <a href="https://wa.me/919882212962" class="whatsapp-float" target="_blank"><i class="fab fa-whatsapp"></i></a>
     <div class="cart-icon" onclick="openCart()"><i class="fas fa-shopping-bag"></i><span class="cart-count" id="cartCount">0</span></div>
 
@@ -37,7 +48,7 @@
                 <h3 style="color:var(--brand-dark); margin-bottom:0.5rem; font-size:1.5rem;">Meet the Hands Behind the 'Handloom(khaddi)'</h3>
                 <p style="color:#777; font-size:0.9rem;">Preserving the Soul of Himachal</p>
             </div>
-            <div class="story-container" style="margin-top:0; align-items:flex-start;">
+            <div class="story-container" style="margin-top:0; align-items:flex-start; background-color: #FFFAF0; padding: 2.5rem; border-left: 5px solid #7A5548; box-shadow: 0 2px 10px rgba(0,0,0,0.05);">
                 <div class="story-image">
                     <img src="artisan1.jpg" alt="Bhanu Master Ji" loading="lazy" style="border-radius:8px; width:100%;">
                     <p style="text-align:center; font-size:0.85rem; color:#777; margin-top:5px;"><em>Master Weaver Bhanu Ji at work.</em></p>
@@ -92,4 +103,5 @@
     <div class="notification" id="notification"><i class="fas fa-check-circle"></i> <span id="notificationText"></span></div>
     <script src="script.js"></script>
 </body>
+
 </html>
