--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#7A5548">
     <title>Contact Us | Handiweave</title>
+    <meta name="description" content="Get in touch with Handiweave.">
+    <meta property="og:title" content="Contact Handiweave">
+    <meta property="og:image" content="https://handiweave.com/logo.png">
+    <meta property="og:url" content="https://handiweave.com/contact.html">
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SEWM8S3WL0"></script>
@@ -53,4 +57,5 @@
     <div class="notification" id="notification"><i class="fas fa-check-circle"></i> <span id="notificationText"></span></div>
     <script src="script.js"></script>
 </body>
+
 </html>
