--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#7A5548">
+
     <title>Handiweave | Traditions and Trends</title>
-    <meta name="description" content="Handiweave: Traditions and Trends. A platform empowering Himachal's artisans to market authentic handmade handloom and handicrafts.">
+    <meta name="description" content="Handiweave: Traditions and Trends 🧶  🐑. A platform empowering Himachal's artisans to market authentic handmade handloom and handicrafts.">
+
+    <meta property="og:title" content="Handiweave | Traditions and Trends">
+    <meta property="og:image" content="https://handiweave.com/logo.png">
+    <meta property="og:description" content="Authentic Handloom from Himachal. Empowering Artisans.">
+    <meta property="og:url" content="https://handiweave.com/">
+    <meta property="og:type" content="website">
+
     <link rel="canonical" href="https://handiweave.com/">
     <link rel="icon" type="image/png" href="favicon.png">
     
     <link rel="stylesheet" href="style.css">
+    
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SEWM8S3WL0"></script>
     <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-SEWM8S3WL0');
+    </script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
+</head>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
@@ -95,3 +114,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
