--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#7A5548">
 
-    <title>Handiweave | Traditions and Trends</title>
-    <meta name="description" content="Handiweave: Traditions and Trends 🧶  🐑. A platform empowering Himachal's artisans to market authentic handmade handloom and handicrafts.">
+    <title>Handiweave | Traditions and Trends ✨</title>
+
+    <meta name="description" content="Handiweave: Traditions and Trends 🧶 🐑. A platform empowering Himachal's artisans to market authentic handmade handloom and handicrafts 🏔️.">
 
     <meta property="og:title" content="Handiweave | Traditions and Trends">
     <meta property="og:image" content="https://handiweave.com/logo.png">
@@ -114,4 +114,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
