--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
         <a href="policies.html" class="nav-link">Policies</a>
     </nav>
 
+    <div style="text-align: center; margin: 40px 20px; color: #682228;">
+        <p style="font-family: 'Playfair Display', serif; font-size: 1.5rem; font-style: italic;">
+            "From the hands of Pahadi artisans, directly to your heart."
+        </p>
+        <div style="width: 50px; height: 2px; background: #D4AF37; margin: 10px auto;"></div>
+    </div>
+    <section class="section-container" style="display:block;">
+        <h2 style="text-align:center; margin-bottom:1rem;">Our Collection</h2>
     <section class="section-container" style="display:block;">
         <h2 style="text-align:center; margin-bottom:1rem;">Our Collection</h2>
         <div class="category-filters">
@@ -144,3 +152,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
