--- a/index.html
+++ b/index.html
@@ -68,14 +68,21 @@
         <a href="policies.html" class="nav-link">Policies</a>
     </nav>
 
-    <div style="text-align: center; margin: 40px 20px; color: #682228;">
+   <div style="text-align: center; margin: 40px 20px; color: #682228;">
         <p style="font-family: 'Playfair Display', serif; font-size: 1.5rem; font-style: italic;">
             "From the hands of Pahadi artisans, directly to your heart."
         </p>
         <div style="width: 50px; height: 2px; background: #D4AF37; margin: 10px auto;"></div>
     </div>
-    <section class="section-container" style="display:block;">
-        <h2 style="text-align:center; margin-bottom:1rem;">Our Collection</h2>
+
+    <div style="text-align: center; margin: 25px 0 40px; color: #4A1217; font-size: 1.2rem;">
+        <i class="fas fa-caret-left" style="color: #D4AF37;"></i> 
+        <i class="fas fa-diamond" style="margin: 0 5px; font-size: 0.8rem;"></i> 
+        <i class="fas fa-mountain" style="font-size: 2rem; margin: 0 15px; color: #682228;"></i> 
+        <i class="fas fa-diamond" style="margin: 0 5px; font-size: 0.8rem;"></i> 
+        <i class="fas fa-caret-right" style="color: #D4AF37;"></i>
+    </div>
+
     <section class="section-container" style="display:block;">
         <h2 style="text-align:center; margin-bottom:1rem;">Our Collection</h2>
         <div class="category-filters">
@@ -152,4 +159,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
