--- a/index.html
+++ b/index.html
@@ -204,12 +204,20 @@
         </form>
     </div>
 
-    <div class="notification" id="notification"><i class="fas fa-check-circle"></i> <span id="notificationText"></span></div>
+  <div class="notification" id="notification"><i class="fas fa-check-circle"></i> <span id="notificationText"></span></div>
+
+    <div id="productModal" class="modal">
+        <div id="modalBody" class="product-modal-content"></div>
+    </div>
     
-    <script src="script.js"></script>
-    <script>
-    </body>
+    <script src="script.js?v=5"></script>
+
+</body>
 </html>
+    
+</body>
+</html>
+
 
 
 
