--- a/journal.html
+++ b/journal.html
@@ -153,7 +153,7 @@
                     <li>Made for warmth, daily wear, and survival</li>
                 </ul>
                 <p>There were no elaborate borders, no complex motifs, and no color systems. Weaving was not yet a professional or market-oriented craft; it was part of domestic life. At this stage, there was no object called a “Kullu shawl.”</p>
-
+                <img src="wool_making.jpg" alt="Traditional Wool Making" style="width:100%; height:auto; border-radius:8px; margin: 30px 0;">
                 <h4>2. How External Weaving Knowledge Entered Kullu</h4>
                 <p>The defining change came between the 18th and 19th centuries, when Kullu became more connected to surrounding Himalayan regions through movement of people and trade.</p>
                 <p>Skilled weaver communities from Bushahr (Bushehr), Kinnaur, and the Rampur belt began moving into Kullu. Some migrated seasonally, some permanently, and some were invited under local patronage. These regions already had advanced weaving traditions with:</p>
@@ -214,7 +214,7 @@
                 <h4>Understanding Kullu Shawls and Their Borders</h4>
                 <p>Traditionally, Kullu shawls are known for their distinctive borders (पल्ला / किनारा). These borders are where the most complex motifs appear. The central body of the shawl often remains plain, allowing the borders to speak. Each motif is arranged in repetition, creating rhythm — much like folk music or oral storytelling.</p>
                 <p>The designs are graph-based, carefully counted on the loom. A single mistake can disturb the entire pattern. This precision demands focus, physical endurance, and years of practice. Whether woven on pit looms or frame looms, the process remains slow and deeply human.</p>
-                <p>The motifs documented here are drawn from traditional design charts used by weavers and designers in Kullu. The images used alongside this journal are adapted from reference material sourced from Vivek Sharma’s book, “Himachal Hathkargha.”</p>
+                <p>The motifs documented here are drawn from traditional design charts used by weavers and designers in Kullu. The Motif's images used alongside this journal are adapted from reference material sourced from Vivek Sharma’s book, “Himachal Hathkargha.”</p>
 
                 <div class="motif-grid">
                     <div class="motif-card">
@@ -285,7 +285,7 @@
                 <div class="credits-box">
                     <strong>Credits</strong><br>
                     Brand: Handiweave<br>
-                    Image Source: Vivek Sharma, Himachal Hathkargha<br>
+                    Motif's image Source: Vivek Sharma, Himachal Hathkargha<br>
                     Cultural Documentation and Curation: Handiweave
                 </div>
             </div>
@@ -339,8 +339,8 @@
                 <div class="credits-box">
                     <strong>Credits</strong><br>
                     Brand: Handiweave<br>
-                    Image Source: Vivek Sharma, Himachal Hathkargha<br>
-                    Cultural Documentation and Curation: Handiweave
+                    Motif's image Source: Vivek Sharma, Himachal Hathkargha<br>
+                    Cultural Documentation & Curation: Handiweave
                 </div>
             </div>
         </div>
@@ -406,3 +406,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
