--- a/journal.html
+++ b/journal.html
@@ -10,6 +10,8 @@
 
     <meta property="og:title" content="Weaver's Journal | Handiweave">
     <meta property="og:image" content="https://handiweave.com/logo.png">
+
+<meta property="og:image" content="https://handiweave.com/images/logo.png">
     <meta property="og:url" content="https://handiweave.com/journal.html">
 
     <link rel="canonical" href="https://handiweave.com/journal.html">
@@ -164,23 +166,63 @@
                 </ul>
                 <p>These weavers did not bring finished shawls into Kullu — they brought knowledge: how to plan borders, how to repeat motifs, how to balance color, and how to organize design on a loom.</p>
                 <p>Local Kullu households gradually learned these techniques. Over time, weaving shifted from purely domestic cloth-making to skill-based craft production.</p>
+<p>Local Kullu households gradually learned these techniques. Over time, weaving shifted from purely domestic cloth-making to skill-based craft production.</p>
 
-                <h4>3. The Role of Royal and Temple Patronage</h4>
-                <p>Local rulers and temple institutions played an important role in stabilizing this new craft. Shawls were commissioned for:</p>
-                <ul>
-                    <li>Religious offerings</li>
-                    <li>Ceremonial gifting</li>
-                    <li>Displays of respect and status</li>
-                </ul>
-                <p>This created demand for consistency and refinement. Weavers began reserving the edges of the fabric for expression. Slowly, borders became a defined space for identity. This moment marks the true birth of the Kullu shawl as a recognizable textile.</p>
+<h4>3. The Role of Royal and Temple Patronage</h4>
 
-                <h4>4. Where Color Came From — and How It Stayed</h4>
-                <p>Color did not originate naturally within early Kullu weaving. The knowledge of dyeing arrived along with migrant weavers and dyers from neighboring Himalayan regions and the plains.</p>
-                <p>Early dyeing relied on: Plant roots, bark, flowers, and minerals; Locally available materials; Techniques learned elsewhere and adapted locally.</p>
-                <p>At first, colors were muted and earthy. As trade routes improved, new dye materials became available, allowing stronger reds, yellows, greens, and blacks to appear — mainly in borders, while the body of the shawl remained restrained.</p>
-                <p>Color in Kullu shawls was never random. Each shade was balanced carefully, respecting the rhythm of the loom and the visual calm of the fabric.</p>
+<p>Local rulers and temple institutions played an important role in stabilizing this new craft. Shawls were commissioned for:</p>
 
-                <h4>5. How Motifs Evolved in Kullu</h4>
+<div class="patronage-gallery">
+    <div class="gallery-item">
+        <img src="t1.jpg" alt="Hadimba Temple">
+        <p class="caption">Temple patronage</p>
+    </div>
+    <div class="gallery-item">
+        <img src="t2.jpg" alt="Devta Procession">
+        <p class="caption">Ceremonial use</p>
+    </div>
+    <div class="gallery-item">
+        <img src="t3.jpg" alt="Respect">
+        <p class="caption">Displays of respect and status</p>
+    </div>
+</div>
+
+<ul>
+    <li>Religious offerings</li>
+    <li>Ceremonial gifting</li>
+    <li>Displays of respect and status</li>
+</ul>
+
+<p>This created demand for consistency and refinement. Weavers began reserving the edges of the fabric for expression. Slowly, borders became a defined space for identity. This moment marks the true birth of the Kullu shawl as a recognizable textile.</p>
+
+<hr class="section-divider"> <h4>4. Where Color Came From — and How It Stayed</h4>
+<p>Color did not originate naturally within early Kullu weaving. The knowledge of dyeing arrived along with migrant weavers and dyers from neighboring Himalayan regions and the plains.</p>
+
+<p>Early dyeing relied on: Plant roots, bark, flowers, and minerals; Locally available materials; Techniques learned elsewhere and adapted locally.</p>
+
+<p>At first, colors were muted and earthy. As trade routes improved, new dye materials became available, allowing stronger reds, yellows, greens, and blacks to appear — mainly in borders, while the body of the shawl remained restrained.</p>
+
+<div class="color-palette-grid">
+    <div class="color-card card-red">
+        <strong>Red (Majith/Lac):</strong> Represents blood, energy, and the spirit of Devtas.
+    </div>
+    <div class="color-card card-yellow">
+        <strong>Yellow (Turmeric):</strong> Mirrors the harvest, sun, and earth.
+    </div>
+    <div class="color-card card-green">
+        <strong>Green (Grasses):</strong> Symbolizes lush pastures and agriculture.
+    </div>
+    <div class="color-card card-blue">
+        <strong>Blue (Indigo):</strong> Represents the vast sky (Aakash) and rivers.
+    </div>
+    <div class="color-card card-bw">
+        <strong>White & Black:</strong> Natural wool representing purity and stability.
+    </div>
+</div>
+
+<p>Color in Kullu shawls was never random. Each shade was balanced carefully, respecting the rhythm of the loom and the visual calm of the fabric.</p>
+
+<h4>5. How Motifs Evolved in Kullu</h4>
                 <p>Early motifs were born from loom structure — squares, steps, and lines. Over time, these developed into identifiable forms such as Dabba (डब्बा) and Jamaa (जमा).</p>
                 <p>Movement-based patterns like Lehriya (लहरिया) entered later, reflecting flow, rhythm, and migration. Symbolic motifs such as Chasam (चसम) and Bulbul Chasam (बुलबुल चसम) added layers of meaning — protection, observation, and balance.</p>
                 <p>Nature- and belief-inspired motifs like Mandir Bel (मंदिरि बेल), Rani Bel (रिानी बेल), Bulbul (बुलबुल), and Ghuhtu (घुट्टू) connected the shawl to landscape and faith.</p>
@@ -406,4 +448,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
