--- a/journal.html
+++ b/journal.html
@@ -165,8 +165,7 @@
                     <li>Established dyeing knowledge</li>
                 </ul>
                 <p>These weavers did not bring finished shawls into Kullu — they brought knowledge: how to plan borders, how to repeat motifs, how to balance color, and how to organize design on a loom.</p>
-                <p>Local Kullu households gradually learned these techniques. Over time, weaving shifted from purely domestic cloth-making to skill-based craft production.</p>
-<p>Local Kullu households gradually learned these techniques. Over time, weaving shifted from purely domestic cloth-making to skill-based craft production.</p>
+               <p>Local Kullu households gradually learned these techniques. Over time, weaving shifted from purely domestic cloth-making to skill-based craft production.</p>
 
 <h4>3. The Role of Royal and Temple Patronage</h4>
 
@@ -182,8 +181,8 @@
         <p class="caption">Ceremonial use</p>
     </div>
     <div class="gallery-item">
-        <img src="t3.jpg" alt="Respect">
-        <p class="caption">Displays of respect and status</p>
+        <img src="t3.jpg" alt="Ritual Offering">
+        <p class="caption">Sacred offering</p>
     </div>
 </div>
 
@@ -195,7 +194,10 @@
 
 <p>This created demand for consistency and refinement. Weavers began reserving the edges of the fabric for expression. Slowly, borders became a defined space for identity. This moment marks the true birth of the Kullu shawl as a recognizable textile.</p>
 
-<hr class="section-divider"> <h4>4. Where Color Came From — and How It Stayed</h4>
+<hr class="section-divider">
+
+<h4>4. Where Color Came From — and How It Stayed</h4>
+
 <p>Color did not originate naturally within early Kullu weaving. The knowledge of dyeing arrived along with migrant weavers and dyers from neighboring Himalayan regions and the plains.</p>
 
 <p>Early dyeing relied on: Plant roots, bark, flowers, and minerals; Locally available materials; Techniques learned elsewhere and adapted locally.</p>
@@ -448,5 +450,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
