--- a/journal.html
+++ b/journal.html
@@ -230,15 +230,28 @@
                 <p>Nature- and belief-inspired motifs like Mandir Bel (मंदिरि बेल), Rani Bel (रिानी बेल), Bulbul (बुलबुल), and Ghuhtu (घुट्टू) connected the shawl to landscape and faith.</p>
                 <p>Over time, these motifs were combined into composite borders, creating the signature visual language of Kullu shawls.</p>
 
-                <h4>6. Localization: When the Shawl Became Truly Kullu</h4>
-                <p>By the late 19th and early 20th centuries, the borrowed techniques had fully localized. Motifs were rearranged, proportions refined, and color balance stabilized.</p>
-                <p>What emerged was not a copy of Kinnauri or Bushahr textiles, but a distinct Kullu identity — recognizable by: A calm, plain body; Strong, rhythmic borders; Balanced use of color. The Kullu shawl became a product of its land, climate, and people.</p>
+               <h4>6. Localization: When the Shawl Became Truly Kullu</h4>
 
-                <h4>7. Handloom as Philosophy</h4>
-                <p>Every Kullu shawl records time and human effort. Handloom weaving requires planning, patience, and memory. Each color change must be anticipated; each motif remembered.</p>
-                <p>Machines can imitate appearance, but not process. Handloom preserves irregularity, intention, and human presence — qualities that define authentic craft.</p>
-                
-                <p><strong>Conclusion: A Living Tradition</strong></p>
+<p>By the late 19th and early 20th centuries, the borrowed techniques had fully localized. Motifs were rearranged, proportions refined, and color balance stabilized.</p>
+
+<p>What emerged was not a copy of Kinnauri or Bushahr textiles, but a distinct Kullu identity — recognizable by: A calm, plain body; Strong, rhythmic borders; Balanced use of color. The Kullu shawl became a product of its land, climate, and people.</p>
+
+<h4>7. Handloom as Philosophy: The Rhythm of the 'Ruchh'</h4>
+
+<p>To understand the soul of this craft, one must look at the tool itself. Before modern frame looms arrived, weaving was done on the traditional Pit Loom, known locally as the <strong>'Ruchh'</strong>.</p>
+
+<p>In this ancient setup, the mechanism is buried in the ground. The weaver sits on the floor with their legs suspended inside a pit dug into the earth to operate the pedals. This design keeps the artisan physically grounded, literally connecting the craft to the soil of the valley.</p>
+
+<div class="loom-image-container">
+    <img src="t4.jpg" alt="Traditional Kullu Pit Loom (Ruchh)" class="loom-img">
+    <p class="caption">The 'Ruchh' (Pit Loom): Where the weaver becomes part of the machine.</p>
+</div>
+
+<p>Every Kullu shawl records time and human breath. Unlike machines that run on electricity, the handloom runs on the <strong>synchronization of mind and body</strong>. The feet find the rhythm, the hands throw the shuttle, and the eyes count the threads. If the mind wanders, the pattern breaks.</p>
+
+<p>Machines can imitate appearance, but they cannot replicate this process. A handwoven shawl preserves irregularity, intention, and human presence. The slight variations in the weave are not flaws; they are the signature of a human hand that paused, thought, and created.</p>
+
+<p><strong>Conclusion: A Living Tradition</strong></p>
                 <p>The Kullu shawl is not ancient folklore, nor modern invention. It is a living tradition shaped by migration, learning, and adaptation.</p>
                 <p>At Handiweave, this history is preserved not as nostalgia, but as responsibility — to ensure that what is worn today carries truth, skill, and respect for the hands that shaped it.</p>
             </div>
@@ -450,6 +463,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
