--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         <a href="shop.html" class="nav-link">Wovens</a>
         <a href="about.html" class="nav-link">Story</a>
         <a href="journal.html" class="nav-link">Journal</a>
+        <a href="crafts.html" class="nav-link">Crafts</a>
         <a href="contact.html" class="nav-link">Contact</a>
         <a href="policies.html" class="nav-link">Policies</a>
     </nav>
@@ -217,6 +218,7 @@
     
 </body>
 </html>
+
 
 
 
