--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
         <a href="shop.html" class="nav-link">Wovens</a>
         <a href="about.html" class="nav-link active">Story</a>
         <a href="journal.html" class="nav-link">Journal</a>
+        <a href="crafts.html" class="nav-link">Crafts</a>
         <a href="contact.html" class="nav-link">Contact</a>
         <a href="policies.html" class="nav-link">Policies</a>
     </nav>
@@ -74,4 +75,5 @@
 </body>
 
 </html>
+
 
