--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
         <a href="shop.html" class="nav-link">Wovens</a>
         <a href="about.html" class="nav-link">Story</a>
         <a href="journal.html" class="nav-link">Journal</a>
+        <a href="crafts.html" class="nav-link">Crafts</a>
         <a href="contact.html" class="nav-link active">Contact</a>
         <a href="policies.html" class="nav-link">Policies</a>
     </nav>
@@ -59,3 +60,4 @@
 </body>
 
 </html>
+
