--- a/journal.html
+++ b/journal.html
@@ -127,6 +127,7 @@
         <a href="shop.html" class="nav-link">Wovens</a>
         <a href="about.html" class="nav-link">Story</a>
         <a href="journal.html" class="nav-link active">Journal</a>
+        <a href="crafts.html" class="nav-link">Crafts</a>
         <a href="contact.html" class="nav-link">Contact</a>
         <a href="policies.html" class="nav-link">Policies</a>
     </nav>
@@ -463,6 +464,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
