--- a/policies.html
+++ b/policies.html
@@ -24,6 +24,7 @@
         <a href="shop.html" class="nav-link">Wovens</a>
         <a href="about.html" class="nav-link">Story</a>
         <a href="journal.html" class="nav-link">Journal</a>
+        <a href="crafts.html" class="nav-link">Crafts</a>
         <a href="contact.html" class="nav-link">Contact</a>
         <a href="policies.html" class="nav-link active">Policies</a>
     </nav>
@@ -36,7 +37,7 @@
                 <div class="policy-content">
                     <p><strong>Exchange Only Policy:</strong></p>
                     <ul style="margin-top:1rem; padding-left:1.2rem;">
-                        <li>We do not offer refunds. Only exchanges are available within 7 days of delivery.</li>
+                        <li> Only exchanges are available within 7 days of delivery.No refund Policy after shipment of order.</li>
                         <li>Products must be unused, unwashed, and with tags intact.</li>
                         <li>Items damaged by customer are not eligible for exchange.</li>
                         <li>To initiate an exchange, please contact us on WhatsApp.</li>
@@ -85,4 +86,5 @@
     <div class="notification" id="notification"><i class="fas fa-check-circle"></i> <span id="notificationText"></span></div>
     <script src="script.js"></script>
 </body>
+
 </html>
