--- a/shop.html
+++ b/shop.html
@@ -36,6 +36,7 @@
         <a href="shop.html" class="nav-link active">Wovens</a>
         <a href="about.html" class="nav-link">Story</a>
         <a href="journal.html" class="nav-link">Journal</a>
+        <a href="crafts.html" class="nav-link">Crafts</a>
         <a href="contact.html" class="nav-link">Contact</a>
         <a href="policies.html" class="nav-link">Policies</a>
     </nav>
@@ -65,3 +66,4 @@
 </body>
 
 </html>
+
